# rue-lib

./: .cspell.json  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  NIX_SETUP.md  PUBLISHING.md  README.md  block_test.geojson  flake.nix  pyproject.toml  road_test.geojson  setup.py  test_cells_standalone.py  test_cluster.py  test_fix_area_too_large.py  test_gdal_buffer.py  test_subdivision_compare.py
.github/: CONTRIBUTING.md  PUBLISHING.md  QUICKSTART.md
.github/workflows/: test.yml
data/: roads.geojson  site.geojson
data/complex_scenario/: boundary.geojson  complex_scenario.qgz  roads.geojson
data/complex_scenario/step1/: parcels.geojson
data/complex_scenario/step2/: outputs.gpkg  outputs.gpkg-shm  outputs.gpkg-wal
examples/: README.md  basic_usage.py  example_art_sec_parts.py  geo_usage.py  run-all-step.sh  step1_generate_parcels.py  step2_generate_streets.py  step2_generate_streets_with_local_roads.py  step3_generate_cluster.py  step4_generate_public.py
examples/test/: block.geojson  roads.geojson
outputs/: output.gpkg
outputs/real_data_test/: all_parts.geojson  corner_parts.geojson  frames.geojson  input_blocks.geojson  input_roads.geojson  off_grid_parts.geojson  off_grid_plots.geojson  off_grid_results.geojson  results.gpkg  side_parts.geojson  side_plots.geojson
outputs/step1_parcels/: parcels.geojson  subsites.geojson
outputs/step2_streets/: all_grids_merged.geojson  outputs.gpkg
outputs/step3_clusters/: outputs.gpkg
scripts/: run_tui.py  start_qgis.sh  vscode.sh
src/rue_lib/: __init__.py  config.py  core.py  financial.py  geo.py
src/rue_lib/cli/: step1.py
src/rue_lib/cluster/: __init__.py  art_sec_no_offgrid.py  block_edges.py  block_parts.py  classification.py  cluster1.js  config.py  frame.py  helpers.py  io.py  off_grid.py  off_grid_subdivision.py  parts_generator.py  runner.py  runner_cold.py  runner_cold.py.backup  runner_warm.py
src/rue_lib/cluster/cold/: add_on_grid_strips_art_sec_loc.py  cluster_on_grid.py  clusters.py  concave_corner.py  expand_roads_buffer.py  on_grid_clusters.py  sub_div_on_grid_corners_convex.py  subdiv_at_concave_corner.py  subdiv_at_convex_corner.py  subdiv_block.py  subdiv_block.py.backup
src/rue_lib/core/: __init__.py  definitions.py  exceptions.py  geometry.py  geometry_sampling.py  helpers.py  projector.py  roads.py
src/rue_lib/public/: __init__.py  config.py  financial.py  open_space.py  operations.py  publics.js  runner.py
src/rue_lib/site/: __init__.py  config.py  financial.py  generator.py  io.py  roads.py  runner.py
src/rue_lib/streets/: __init__.py  blocks.py  blocks_orthogonal.py  cell.py  cold_boundaries_utils.py  config.py  financial.py  fix_bad_angles.py  generator.py  geometry_utils.py  grids.py  io.py  lines.py  local_streets.py  operations.py  runner.py  runner_local.py  runner_local_operations.py  runner_utils.py
src/rue_lib/templates/: template.gpkg
src/rue_lib/utils/: __init__.py  io.py
src/rue_tui/: README.md  __init__.py  __main__.py  app.py  config.py  demo_data.py  pyproject.toml  visualizer.py  widgets.py
src/rue_viewer/: index.html  server.py
tests/: __init__.py  test_cell.py  test_cli.py  test_cluster.py  test_core.py  test_definitions.py  test_financial.py  test_geo.py  test_io.py  test_public_config.py  test_public_operations.py  test_public_runner.py  test_site.py  test_streets.py  test_streets_blocks.py  test_streets_config.py  test_streets_lines.py  test_streets_operations.py
viewer/: index.html  requirements.txt  server.py  start_viewer.sh
